--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 <body>
     <!-- header section -->
     <header>
+        <div id="menu-bar" class="fas fa-bars"></div>
+
+
+
+
+
+
         <a href="#" class="logo"><span>T</span>ravel</a>
         <nav class="navbar">
             <a href="#home">Home</a>
@@ -49,7 +56,16 @@
 
     <!-- login form container -->
 
-    <div class="class login-form-container">
+    <div class="login-form-container">
+
+        <i class="fas fa-time" id="form-close"></i>
+
+
+
+
+
+
+
         <form action="">
             <h3> login</h3>
             <input type="email" class="box" placeholder="enter your email">
@@ -57,10 +73,34 @@
             <input type="submit" value="login now" class="btn">
             <input type="checkbox" id="remember">
             <label for="remember">remember me</label>
-            <p>forget password?<a href="">click here</a></p>
-            <p>don't have?<a href=""></a></p>
+            <p>forget password?<a href="#">click here</a></p>
+            <p>don't have and account?<a href="#">register now</a></p>
+
         </form>
     </div>
+
+    <!-- home section starts -->
+
+    <section class="home" id="home">
+        <div class="content">
+              <h3>adventure is worthwhile</h3>
+              <p>discover new places with us,adventure awaits</p>
+              <a href="#" class="btn">discover more</a>
+        </div>
+    </section>
+
+
+
+
+
+
+
+
+
+
+
+     <!-- home section end -->
+
 
 
 
