--- a/index.html
+++ b/index.html
@@ -87,6 +87,16 @@
               <p>discover new places with us,adventure awaits</p>
               <a href="#" class="btn">discover more</a>
         </div>
+
+
+        <div class="controls">
+            <span class="vid-btn" data-src=""></span>
+        </div>
+
+        <div class="video-container">
+            <video src="" id="video-slider" loop autoplay muted></video>
+            
+        </div>
     </section>
 
 
