--- a/index.html
+++ b/index.html
@@ -90,27 +90,42 @@
 
 
         <div class="controls">
-            <span class="vid-btn" data-src=""></span>
+            <span class="vid-btn active" data-src="./imgvideo/travel-vid2.mp4"></span>
+            <span class="vid-btn" data-src="./imgvideo/travel-vid.mp4"></span>
+            <span class="vid-btn" data-src="./imgvideo/travel-vid3.mp4"></span>
+            <span class="vid-btn" data-src="./imgvideo/travel-vid4.mp4"></span>
+            <span class="vid-btn" data-src="./imgvideo/travel-vid5.mp4"></span>
         </div>
 
+
+
+
+
         <div class="video-container">
-            <video src="" id="video-slider" loop autoplay muted></video>
+            <video src="./imgvideo/travel-vid2.mp4" id="video-slider" loop autoplay muted></video>
             
         </div>
     </section>
 
 
+ <!-- home section end -->
 
+ <!-- book section star -->
+  <section class="book" id="book">
+    <h1 class="heading">
+        <span>B</span>
+        <span>o</span>
+        <span>o</span>
+        <span>k</span>
+        <span class="space"></span>
+        <span>N</span>
+        <span>o</span>
+        <span>w</span>
+    </h1>
 
-
-
-
-
-
-
-
-     <!-- home section end -->
-
+    <div class="row"></div>
+  </section>
+  <!-- book section Ends -->
 
 
 
