--- a/index.html
+++ b/index.html
@@ -123,7 +123,44 @@
         <span>w</span>
     </h1>
 
-    <div class="row"></div>
+
+
+    <!-- **************************************************************** -->
+    <div class="row">
+
+        <div class="image">
+            <img src="">
+        </div>
+
+        <form action="">
+            <div class="inputBox">
+                <h3>where to</h3>
+                <input type="text" placeholder="place name">
+            </div>
+
+            <div class="inputBox">
+                <h3>how many</h3>
+                <input type="number" placeholder="number of guests">
+            </div>
+
+            <div class="inputBox">
+                <h3>arrivals</h3>
+                <input type="date" >
+            </div>
+
+                <div class="inputBox">
+                <h3>leaving</h3>
+                <input type="date" >
+            </div>
+        </form>
+
+
+
+
+
+
+
+    </div>
   </section>
   <!-- book section Ends -->
 
