--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
     <div class="row">
 
         <div class="image">
-            <img src="">
+            <img src="./imgvideo/lets'travel.jpg">
         </div>
 
         <form action="">
