--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
 
  <!-- home section end -->
-
+<!-- ************************************************************** -->
  <!-- book section star -->
   <section class="book" id="book">
     <h1 class="heading">
@@ -129,7 +129,7 @@
     <div class="row">
 
         <div class="image">
-            <img src="./imgvideo/lets'travel.jpg">
+            <img src="./imgvideo/main1.img">
         </div>
 
         <form action="">
@@ -152,7 +152,150 @@
                 <h3>leaving</h3>
                 <input type="date" >
             </div>
+            <input type="submit" class="btn" value="Book Now">
         </form>
+
+
+
+<!-- ****************************************************************** -->
+
+
+
+    </div>
+  </section>
+  <!-- book section Ends -->
+
+<!-- packages section stars -->
+
+<section class="packages" id="packages">
+      <h1 class="heading">
+        <span>P</span>
+        <span>a</span>
+        <span>c</span>
+        <span>k</span>
+        <span>a</span>
+        <span>g</span>
+        <span>e</span>
+        <span>s</span>
+    </h1>
+
+
+
+    <div class="box-container">
+
+     <div class="box">
+        <img src="./imgvideo/mumbai.img">
+        <div class="content">
+            <h3><i class="fas fa-map-marker-alt"></i>mumbai</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eum a non neque deserunt sit, sequi velit eveniet modi, laboriosam sapiente doloremque eos magni repellendus nostrum delectus eaque. Omnis, eligendi?</p>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+            <div class="price">$90.00 <span>$120.00</span></div>
+            <a href="#" class="btn"> book now</a>
+        </div>
+      </div>
+
+
+
+      <div class="box">
+        <img src="./imgvideo/sydney.ing.jpg">
+        <div class="content">
+            <h3><i class="fas fa-map-marker-alt"></i>Sydney</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eum a non neque deserunt sit, sequi velit eveniet modi, laboriosam sapiente doloremque eos magni repellendus nostrum delectus eaque. Omnis, eligendi?</p>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+            <div class="price">$90.00 <span>$120.00</span></div>
+            <a href="#" class="btn"> book now</a>
+        </div>
+      </div>
+
+
+
+      <div class="box">
+        <img src="./imgvideo/hawaii.img">
+        <div class="content">
+            <h3><i class="fas fa-map-marker-alt"></i>hawaii</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eum a non neque deserunt sit, sequi velit eveniet modi, laboriosam sapiente doloremque eos magni repellendus nostrum delectus eaque. Omnis, eligendi?</p>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+            <div class="price">$90.00 <span>$120.00</span></div>
+            <a href="#" class="btn"> book now</a>
+        </div>
+      </div>
+
+
+
+           <div class="box">
+        <img src="./imgvideo/paris.img">
+        <div class="content">
+            <h3><i class="fas fa-map-marker-alt"></i>Paris</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eum a non neque deserunt sit, sequi velit eveniet modi, laboriosam sapiente doloremque eos magni repellendus nostrum delectus eaque. Omnis, eligendi?</p>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+            <div class="price">$90.00 <span>$120.00</span></div>
+            <a href="#" class="btn"> book now</a>
+        </div>
+      </div>
+
+
+
+           <div class="box">
+        <img src="./imgvideo/tokyo.img">
+        <div class="content">
+            <h3><i class="fas fa-map-marker-alt"></i>Tokyo</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eum a non neque deserunt sit, sequi velit eveniet modi, laboriosam sapiente doloremque eos magni repellendus nostrum delectus eaque. Omnis, eligendi?</p>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+            <div class="price">$90.00 <span>$120.00</span></div>
+            <a href="#" class="btn"> book now</a>
+        </div>
+      </div>
+
+
+           <div class="box">
+        <img src="./imgvideo/egypt.img">
+        <div class="content">
+            <h3><i class="fas fa-map-marker-alt"></i>Egypt</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi eum a non neque deserunt sit, sequi velit eveniet modi, laboriosam sapiente doloremque eos magni repellendus nostrum delectus eaque. Omnis, eligendi?</p>
+            <div class="stars">
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+            </div>
+            <div class="price">$90.00 <span>$120.00</span></div>
+            <a href="#" class="btn"> book now</a>
+        </div>
+      </div>
+
+
+
 
 
 
@@ -161,10 +304,14 @@
 
 
     </div>
-  </section>
-  <!-- book section Ends -->
 
 
+</section>
+
+
+
+
+ <!-- packages section Ends -->
 
 
 
