--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>travelweb</title>
 
+   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+
+    
+
     <!-- font awesome  cdn link -->
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 
@@ -313,6 +317,250 @@
 
  <!-- packages section Ends -->
 
+<!-- service section starts -->
+ <section class="services" id="services">
+
+      <h1 class="heading">
+        <span>S</span>
+        <span>e</span>
+        <span>r</span>
+        <span>v</span>
+        <span>i</span>
+        <span>c</span>
+        <span>e</span>
+        <span>s</span>
+    </h1>
+
+    <div class="box-container">
+     <div class="box">
+        <i class="fas fa-hotel"></i>
+        <h3>affordable hotels</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, eius? Minima temporibus unde, vero dolorum ad provident sunt vel ipsum assumenda sed modi. Tempore libero placeat vero deleniti quo labore.</p>
+     </div>
+
+      <div class="box">
+        <i class="fas fa-utensils"></i>
+        <h3>food and drinks</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, eius? Minima temporibus unde, vero dolorum ad provident sunt vel ipsum assumenda sed modi. Tempore libero placeat vero deleniti quo labore.</p>
+     </div>
+
+      <div class="box">
+        <i class="fas fa-bullhorn"></i>
+        <h3>safety guide</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, eius? Minima temporibus unde, vero dolorum ad provident sunt vel ipsum assumenda sed modi. Tempore libero placeat vero deleniti quo labore.</p>
+     </div>
+
+        <div class="box">
+        <i class="fas fa-globe-asia"></i>
+        <h3>around the world</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, eius? Minima temporibus unde, vero dolorum ad provident sunt vel ipsum assumenda sed modi. Tempore libero placeat vero deleniti quo labore.</p>
+     </div>
+
+        <div class="box">
+        <i class="fas fa-bullhorn"></i>
+        <h3>safety guide</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, eius? Minima temporibus unde, vero dolorum ad provident sunt vel ipsum assumenda sed modi. Tempore libero placeat vero deleniti quo labore.</p>
+     </div>
+
+        <div class="box">
+        <i class="fas fa-plane"></i>
+        <h3>fastest travel</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, eius? Minima temporibus unde, vero dolorum ad provident sunt vel ipsum assumenda sed modi. Tempore libero placeat vero deleniti quo labore.</p>
+     </div>
+
+        <div class="box">
+        <i class="fas fa-hiking"></i>
+        <h3>adventures</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tenetur, eius? Minima temporibus unde, vero dolorum ad provident sunt vel ipsum assumenda sed modi. Tempore libero placeat vero deleniti quo labore.</p>
+     </div>
+    </div>
+ </section>
+
+
+
+ <!-- service section end -->
+
+<!-- gallery section starts -->
+<section class="gallery" id="gallery">
+
+      <h1 class="heading">
+        <span>G</span>
+        <span>a</span>
+        <span>l</span>
+        <span>l</span>
+        <span>e</span>
+        <span>r</span>
+        <span>y</span>
+    </h1>
+    <div class="box-container">
+        <div class="box">
+            <img src="./imgvideo/g-1.jpg">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, optio aut libero nulla ad ipsum ipsa quae nihil quas, illo illum fugiat, in natus doloremque. Perspiciatis pariatur tempore et facere.</p>
+                <a href="#" class="btn">See more</a>
+            </div>
+        </div>
+
+          <div class="box">
+            <img src="./imgvideo/g-2.jpg">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, optio aut libero nulla ad ipsum ipsa quae nihil quas, illo illum fugiat, in natus doloremque. Perspiciatis pariatur tempore et facere.</p>
+                <a href="#" class="btn">See more</a>
+            </div>
+        </div>
+
+          <div class="box">
+            <img src="./imgvideo/g-3.jpg">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, optio aut libero nulla ad ipsum ipsa quae nihil quas, illo illum fugiat, in natus doloremque. Perspiciatis pariatur tempore et facere.</p>
+                <a href="#" class="btn">See more</a>
+            </div>
+        </div>
+
+          <div class="box">
+            <img src="./imgvideo/g-4.jpg">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, optio aut libero nulla ad ipsum ipsa quae nihil quas, illo illum fugiat, in natus doloremque. Perspiciatis pariatur tempore et facere.</p>
+                <a href="#" class="btn">See more</a>
+            </div>
+        </div>
+
+          <div class="box">
+            <img src="./imgvideo/g-5.jpg">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, optio aut libero nulla ad ipsum ipsa quae nihil quas, illo illum fugiat, in natus doloremque. Perspiciatis pariatur tempore et facere.</p>
+                <a href="#" class="btn">See more</a>
+            </div>
+        </div>
+
+          <div class="box">
+            <img src="./imgvideo/g-6.jpg">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, optio aut libero nulla ad ipsum ipsa quae nihil quas, illo illum fugiat, in natus doloremque. Perspiciatis pariatur tempore et facere.</p>
+                <a href="#" class="btn">See more</a>
+            </div>
+        </div>
+
+          <div class="box">
+            <img src="./imgvideo/g-7.jpg">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, optio aut libero nulla ad ipsum ipsa quae nihil quas, illo illum fugiat, in natus doloremque. Perspiciatis pariatur tempore et facere.</p>
+                <a href="#" class="btn">See more</a>
+            </div>
+        </div>
+
+          <div class="box">
+            <img src="./imgvideo/g-8.jpg">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, optio aut libero nulla ad ipsum ipsa quae nihil quas, illo illum fugiat, in natus doloremque. Perspiciatis pariatur tempore et facere.</p>
+                <a href="#" class="btn">See more</a>
+            </div>
+        </div>
+
+         <div class="box">
+            <img src="./imgvideo/g-9.jpg">
+            <div class="content">
+                <h3>amazing places</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deleniti, optio aut libero nulla ad ipsum ipsa quae nihil quas, illo illum fugiat, in natus doloremque. Perspiciatis pariatur tempore et facere.</p>
+                <a href="#" class="btn">See more</a>
+            </div>
+        </div>
+    </div>
+
+</section>
+
+<!-- gallery section Ends -->
+
+
+
+<!-- review section starts -->
+
+<section class="review" id="review">
+
+       <h1 class="heading">
+        <span>R</span>
+        <span>e</span>
+        <span>v</span>
+        <span>i</span>
+        <span>e</span>
+        <span>w</span>
+    </h1>
+
+    <div class="swiper-container review-slider">
+
+        <div class="swiper-wrapper">
+            <div class="swiper-slide">
+                <div class="box">
+                  <img src="./imgvideo/r-1.jpg">  
+                  <h3>johm deo</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt excepturi iure soluta reprehenderit error corrupti id maxime, nostrum provident molestiae, expedita animi cumque veniam. Aperiam modi debitis fugit ipsum nesciunt.</p>
+                <div class="starts">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                </div>
+            </div>
+
+             <div class="swiper-slide">
+                <div class="box">
+                  <img src="./imgvideo/r-2.jpg">  
+                  <h3>johm deo</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt excepturi iure soluta reprehenderit error corrupti id maxime, nostrum provident molestiae, expedita animi cumque veniam. Aperiam modi debitis fugit ipsum nesciunt.</p>
+                <div class="starts">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                </div>
+            </div>
+
+             <div class="swiper-slide">
+                <div class="box">
+                  <img src="./imgvideo/r-3.jpg">  
+                  <h3>johm deo</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt excepturi iure soluta reprehenderit error corrupti id maxime, nostrum provident molestiae, expedita animi cumque veniam. Aperiam modi debitis fugit ipsum nesciunt.</p>
+                <div class="starts">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                </div>
+            </div>
+
+             <div class="swiper-slide">
+                <div class="box">
+                  <img src="./imgvideo/r-4.jpg">  
+                  <h3>johm deo</h3>
+                  <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt excepturi iure soluta reprehenderit error corrupti id maxime, nostrum provident molestiae, expedita animi cumque veniam. Aperiam modi debitis fugit ipsum nesciunt.</p>
+                <div class="starts">
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                  <i class="fas fa-star"></i>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
+ <!-- review section Ends -->
 
 
 
@@ -322,12 +570,7 @@
 
 
 
-
-
-"
-
-
-
+<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
 
     <!-- custon js file link -->
      <script src="js/script.js"></script>
