--- a/index.html
+++ b/index.html
@@ -494,74 +494,114 @@
         <span>w</span>
     </h1>
 
-    <div class="swiper-container review-slider">
+<div class="swiper-container review-slider">
 
-        <div class="swiper-wrapper">
-            <div class="swiper-slide">
-                <div class="box">
+    <div class="swiper-wrapper">
+        <div class="swiper-slide">
+            <div class="box">
                   <img src="./imgvideo/r-1.jpg">  
                   <h3>johm deo</h3>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt excepturi iure soluta reprehenderit error corrupti id maxime, nostrum provident molestiae, expedita animi cumque veniam. Aperiam modi debitis fugit ipsum nesciunt.</p>
-                <div class="starts">
+                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                </div>
                 </div>
             </div>
+        </div>
 
-             <div class="swiper-slide">
-                <div class="box">
+        <div class="swiper-slide">
+            <div class="box">
                   <img src="./imgvideo/r-2.jpg">  
                   <h3>johm deo</h3>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt excepturi iure soluta reprehenderit error corrupti id maxime, nostrum provident molestiae, expedita animi cumque veniam. Aperiam modi debitis fugit ipsum nesciunt.</p>
-                <div class="starts">
+                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                </div>
                 </div>
             </div>
+        </div>
 
-             <div class="swiper-slide">
-                <div class="box">
+        <div class="swiper-slide">
+            <div class="box">
                   <img src="./imgvideo/r-3.jpg">  
                   <h3>johm deo</h3>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt excepturi iure soluta reprehenderit error corrupti id maxime, nostrum provident molestiae, expedita animi cumque veniam. Aperiam modi debitis fugit ipsum nesciunt.</p>
-                <div class="starts">
+                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                </div>
                 </div>
             </div>
+        </div>
 
-             <div class="swiper-slide">
-                <div class="box">
+        <div class="swiper-slide">
+            <div class="box">
                   <img src="./imgvideo/r-4.jpg">  
                   <h3>johm deo</h3>
                   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sunt excepturi iure soluta reprehenderit error corrupti id maxime, nostrum provident molestiae, expedita animi cumque veniam. Aperiam modi debitis fugit ipsum nesciunt.</p>
-                <div class="starts">
+                <div class="stars">
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
                   <i class="fas fa-star"></i>
-                </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 
 </section>
  <!-- review section Ends -->
 
+<!-- contact section starts -->
+
+<section class="contact" id="contact">
+
+    <h1 class="heading">
+        <span>c</span>
+        <span>o</span>
+        <span>n</span>
+        <span>t</span>
+        <span>a</span>
+        <span>c</span>
+        <span>t</span>
+    </h1>
+
+    <div class="row">
+        <div class="image">
+            <img src="./imgvideo/contact.jpg">
+        </div>
+
+        <form action="">
+            <div class="inputBox">
+                <input type="text" placeholder="name">
+                <input type="email" placeholder="email">
+            </div>
+
+              <div class="inputBox">
+                <input type="number" placeholder="number">
+                <input type="text" placeholder="subject">
+            </div>
+
+            <textarea  placeholder="message" id="" cols="30" rows="10"></textarea>
+            <input type="submit" class="btn" value="send message">
+
+        </form>
+    </div>
+
+</section>
+
+
+ <!-- contact section Ends -->
 
 
 
