--- a/index.html
+++ b/index.html
@@ -604,6 +604,65 @@
  <!-- contact section Ends -->
 
 
+  <!-- brand section -->
+    <section class="brand-container">
+
+        <div class="swiper-container brand-slider">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide"><img src="./imgvideo/b-1.jpg"></div>
+                <div class="swiper-slide"><img src="./imgvideo/b-2.jpg"></div>
+                <div class="swiper-slide"><img src="./imgvideo/b-3.jpg"></div>
+                <div class="swiper-slide"><img src="./imgvideo/b-4.jpg"></div>
+                <div class="swiper-slide"><img src="./imgvideo/b-5.jpg"></div>
+                <div class="swiper-slide"><img src="./imgvideo/b-6.jpg"></div>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+<!-- brand section end -->
+
+<!-- footer section -->
+ <section class="footer">
+     <div class="box-container">
+
+        <div class="box">
+            <h3>about us</h3>
+        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque obcaecati neque placeat quibusdam tempora nam corporis, hic deleniti autem architecto earum debitis sint temporibus ipsa consequatur vel adipisci sequi alias</p>
+    
+     </div>
+
+        <div class="box">
+            <h3>about us</h3>
+        </div>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque obcaecati neque placeat quibusdam tempora nam corporis, hic deleniti autem architecto earum debitis sint temporibus ipsa consequatur vel adipisci sequi alias</p>
+    
+     </div>
+
+        <div class="box">
+            <h3>branch location</h3>
+            <a href="#">usa</a>
+            <a href="#">india</a>
+            <a href="#">japan</a>
+            <a href="#">france</a>
+        </div>
+
+                <div class="box">
+            <h3>quick links</h3>
+            <a href="#">home</a>
+            <a href="#">book</a>
+            <a href="#">package</a>
+            <a href="#">service</a>
+        </div>
+     </div>
+ </section>
+
+
+
 
 
 
