--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>travelweb</title>
 
-   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css"/>
+<link rel="stylesheet" href="https://unpkg.com/swiper/css/swiper.min.css">
 
     
 
@@ -651,7 +651,7 @@
             <a href="#">france</a>
         </div>
 
-                <div class="box">
+            <div class="box">
             <h3>quick links</h3>
             <a href="#">home</a>
             <a href="#">book</a>
@@ -669,7 +669,7 @@
 
 
 
-<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+<script src="https://unpkg.com/swiper/js/swiper.min.js"></script>
 
     <!-- custon js file link -->
      <script src="js/script.js"></script>
