--- a/index.html
+++ b/index.html
@@ -666,7 +666,7 @@
         </div>
     </div>
 
-    <h1 class="credit">created by<span>mis.web designer</span> |all rights reserved</h1>
+    <h1 class="credit">created by  <span>Mis.web designer</span> |all rights reserved</h1>
 
 </section>
 
